<resources>
    <string name="app_name">Mobile_App_Portfolio</string>

    <!-- GENERAL -->
    <string name="instagram">Instagram</string>
    <string name="settings">Settings</string>
    <string name="calculator">calculator</string>
    <string name="midterm">midterm</string>
    <string name="connect_three">connect three</string>
    <string name="passing_intents">passing intents</string>
    <string name="menu">menu</string>

</resources>