<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingHorizontal="24dp">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_instagram"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:layout_width="@dimen/w_btn"
                android:layout_height="@dimen/h_btn"
                android:layout_marginBottom="10dp"
                android:backgroundTint="@color/black"
                android:paddingHorizontal="32dp"
                android:paddingVertical="10dp"
                android:text="@string/instagram"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="14sp"
                app:cornerRadius="@dimen/corner_radius_btn" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_settings"
                android:layout_width="@dimen/w_btn"
                android:layout_height="@dimen/h_btn"
                android:layout_marginBottom="10dp"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:backgroundTint="@color/black"
                app:cornerRadius="@dimen/corner_radius_btn"
                android:paddingHorizontal="32dp"
                android:paddingVertical="10dp"
                android:text="@string/settings"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="14sp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_calculator"
                android:layout_width="@dimen/w_btn"
                android:layout_height="@dimen/h_btn"
                android:layout_marginBottom="10dp"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:backgroundTint="@color/black"
                app:cornerRadius="@dimen/corner_radius_btn"
                android:paddingHorizontal="32dp"
                android:paddingVertical="10dp"
                android:text="@string/calculator"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="14sp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_midterm"
                android:layout_width="@dimen/w_btn"
                android:layout_height="@dimen/h_btn"
                android:layout_marginBottom="10dp"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:backgroundTint="@color/black"
                app:cornerRadius="@dimen/corner_radius_btn"
                android:paddingHorizontal="32dp"
                android:paddingVertical="10dp"
                android:text="@string/midterm"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="14sp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_connect_three"
                android:layout_width="@dimen/w_btn"
                android:layout_height="@dimen/h_btn"
                android:layout_marginBottom="10dp"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:backgroundTint="@color/black"
                app:cornerRadius="@dimen/corner_radius_btn"
                android:paddingHorizontal="32dp"
                android:paddingVertical="10dp"
                android:text="@string/connect_three"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="14sp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_passing_intents"
                android:layout_width="@dimen/w_btn"
                android:layout_height="@dimen/h_btn"
                android:layout_marginBottom="10dp"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:backgroundTint="@color/black"
                app:cornerRadius="@dimen/corner_radius_btn"
                android:paddingHorizontal="32dp"
                android:paddingVertical="10dp"
                android:text="@string/passing_intents"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="14sp" />


            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_menu"
                android:layout_width="@dimen/w_btn"
                android:layout_height="@dimen/h_btn"
                android:layout_marginBottom="10dp"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:backgroundTint="@color/black"
                app:cornerRadius="@dimen/corner_radius_btn"
                android:paddingHorizontal="32dp"
                android:paddingVertical="10dp"
                android:text="@string/menu"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="14sp" />

        </LinearLayout>



    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>